objects/Question__c.object
<CustomObject>
    <description>Case# 00615287 - This object will store questions for any survey - Arokia Nathan</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Case# 00615287 - This field will store active/inactive flag - Arokia Nathan</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Case# 00615287 - This field will store application, functional area of this question - Arokia Nathan</description>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>Live Chat Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Link Survey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Case# 00615287 - This field is used for data loading - Arokia Nathan</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Case# 00615287 - This field will store question - Arokia Nathan</description>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Case# 00615287 - This field will store sequence number like 1,2,3... so that we can display questions in this order - Arokia Nathan</description>
        <label>Sequence#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <description>Case 00628924 - We need a simple &quot;Topic&quot; field to make it easy to aggregate chat survey responses for questions that are conceptually the same, but in different languages - Arokia Nathan</description>
        <label>Topic</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Case# 00615287 - This field will store question type like signle choice, multiple choise, text... - Arokia Nathan</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Area</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Type__c</columns>
        <columns>Application__c</columns>
        <columns>Sequence__c</columns>
        <columns>Active__c</columns>
        <columns>Topic__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Question#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>